Add articles section to terminal commands for improved navigation

--- a/index.html
+++ b/index.html
@@ -1,152 +1,258 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+          "gtm.start": new Date().getTime(),
+          event: "gtm.js",
+        });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-57SP45JR");
+    </script>
+    <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-32RRC75QRE"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-<head>
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-57SP45JR');</script>
-  <!-- End Google Tag Manager -->
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-32RRC75QRE"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+      gtag("config", "G-32RRC75QRE");
+    </script>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0"
+    />
+    <title>carpediem23's Virtual Card Application</title>
+    <link
+      rel="icon"
+      href="./assets/images/profile_transparent.webp"
+      type="image/x-icon"
+    />
+    <meta name="description" content="carpediem23's Virtual Card Application" />
+    <meta name="author" content="carpediem23" />
+    <meta
+      name="keywords"
+      content="carpediem23, web developer, fullstack developer, javascript, typescript, node js, react js, react native, next js, tailwind, html, css, express js, asp.net, web application, mobile application, software development, training, mentoring"
+    />
+    <meta name="theme-color" content="#00ff18" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="carpediem23's Virtual Card" />
+    <meta
+      property="og:description"
+      content="carpediem23's Virtual Card Application"
+    />
+    <meta
+      property="og:image"
+      content="./assets/images/profile_transparent.png"
+    />
+    <meta property="og:image:alt" content="carpediem23's Profile Picture" />
+    <meta property="og:url" content="https://carpediem23.github.io" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="carpediem23's vCard" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="carpediem23's Virtual Card" />
+    <meta
+      name="twitter:description"
+      content="carpediem23's Virtual Card Application"
+    />
+    <meta
+      name="twitter:image"
+      content="./assets/images/profile_transparent.webp"
+    />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <script defer src="./scripts/index.js" type="module"></script>
+  </head>
 
-    gtag("config", "G-32RRC75QRE");
-  </script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" />
-  <title>carpediem23's Virtual Card Application</title>
-  <link rel="icon" href="./assets/images/profile_transparent.webp" type="image/x-icon" />
-  <meta name="description" content="carpediem23's Virtual Card Application" />
-  <meta name="author" content="carpediem23" />
-  <meta name="keywords"
-    content="carpediem23, web developer, fullstack developer, javascript, typescript, node js, react js, react native, next js, tailwind, html, css, express js, asp.net, web application, mobile application, software development, training, mentoring" />
-  <meta name="theme-color" content="#00ff18" />
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="carpediem23's Virtual Card" />
-  <meta property="og:description" content="carpediem23's Virtual Card Application" />
-  <meta property="og:image" content="./assets/images/profile_transparent.png" />
-  <meta property="og:image:alt" content="carpediem23's Profile Picture" />
-  <meta property="og:url" content="https://carpediem23.github.io" />
-  <meta property="og:locale" content="en_US" />
-  <meta property="og:site_name" content="carpediem23's vCard" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="carpediem23's Virtual Card" />
-  <meta name="twitter:description" content="carpediem23's Virtual Card Application" />
-  <meta name="twitter:image" content="./assets/images/profile_transparent.webp" />
-  <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="./styles/global.css" />
-  <script defer src="./scripts/index.js" type="module"></script>
-</head>
-
-<body>
-  <main>
-    <section id="terminal-container">
-      <div class="terminal">
-        <header class="terminal-header">
-          <section class="terminal-buttons">
-            <div class="terminal-button close"></div>
-            <div class="terminal-button minimize"></div>
-            <div class="terminal-button maximize"></div>
-          </section>
-          <h1 class="terminal-title">carpediem23@portfolio ~</h1>
-        </header>
-        <section class="terminal-content"></section>
+  <body>
+    <main>
+      <section id="terminal-container">
+        <div class="terminal">
+          <header class="terminal-header">
+            <section class="terminal-buttons">
+              <div class="terminal-button close"></div>
+              <div class="terminal-button minimize"></div>
+              <div class="terminal-button maximize"></div>
+            </section>
+            <h1 class="terminal-title">carpediem23@portfolio ~</h1>
+          </header>
+          <section class="terminal-content"></section>
+        </div>
+      </section>
+    </main>
+    <!-- Templates -->
+    <template id="command-line-template">
+      <div class="command-line">
+        <span class="prompt">carpediem23@portfolio:~$</span>
+        <input
+          name="type"
+          type="text"
+          class="command-input"
+          autocomplete="off"
+        />
       </div>
-    </section>
-  </main>
-  <!-- Templates -->
-  <template id="command-line-template">
-    <div class="command-line">
-      <span class="prompt">carpediem23@portfolio:~$</span>
-      <input name="type" type="text" class="command-input" autocomplete="off" />
-    </div>
-  </template>
-  <template id="help-template">
-    <div class="terminal-output">
-      <h4><strong>Available Commands:</strong></h4>
-      <p>- <strong>help:</strong> Show this help message</p>
-      <p>- <strong>about:</strong> Learn about me</p>
-      <p>- <strong>skills:</strong> View my technical skills</p>
-      <p>- <strong>projects:</strong> See my projects</p>
-      <p>- <strong>contact:</strong> Get my contact information</p>
-      <p>- <strong>clear:</strong> Clear the terminal</p>
-    </div>
-  </template>
-  <template id="welcome-template">
-    <div class="terminal-output">
-      <h4>Welcome to my terminal vCard!</h4>
-      <p>Type '<strong>help</strong>' to see available commands.</p>
-      <p>--------------------------------</p>
-    </div>
-  </template>
-  <template id="about-template">
-    <div class="terminal-output">
-      <p>Hi, I'm carpediem23! 👋</p>
-      <p>
-        I'm a Fullstack Developer passionate about creating web and mobile
-        applications using modern technologies.
-      </p>
-      <p>I love music 🎵 and gaming 🎮 in my free time.</p>
-    </div>
-  </template>
-  <template id="skills-template">
-    <div class="terminal-output">
-      <h4><strong>Technical Skills:</strong></h4>
-      <p>
-        - <strong>Frontend:</strong> React.js, React Native, Next.js,
-        JavaScript, TypeScript
-      </p>
-      <p>- <strong>Backend:</strong> Node.js, Express.js, ASP.NET</p>
-      <p>- <strong>Database:</strong> MongoDB, PostgreSQL, MySQL</p>
-      <p>- <strong>Other:</strong> Git, Docker, Google Cloud, Azure</p>
-    </div>
-  </template>
-  <template id="projects-template">
-    <div class="terminal-output">
-      <h4><strong>Notable Projects:</strong></h4>
-      <p>1. Virtual Card Terminal (This website!)</p>
-      <p>2. Various Web, Game and Mobile Applications</p>
-      <p>For more details, visit: https://github.com/carpediem23</p>
-    </div>
-  </template>
-  <template id="contact-template">
-    <div class="terminal-output">
-      <h4><strong>Get in touch (Please click):</strong></h4>
-      <a href="https://github.com/carpediem23" target="_blank">- GitHub</a>
-      <a href="https://www.linkedin.com/in/alptugturkis" target="_blank">- LinkedIn</a>
-    </div>
-  </template>
-  <noscript>
-    <div class="noscript-content">
-      <img src="./assets/images/profile_transparent.webp" alt="Profile picture of carpediem23" width="150"
-        height="150" />
-      <h1>carpediem23</h1>
-      <p>
-        Hello, I am a fullstack developer who loves music and gaming. I
-        develop web and mobile applications using modern technologies.
-      </p>
-      <div class="social-links-basic">
-        <a href="https://github.com/carpediem23" target="_blank" rel="noopener noreferrer">Github Profile</a>
-        <a href="https://www.linkedin.com/in/alptugturkis" target="_blank" rel="noopener noreferrer">LinkedIn
-          Profile</a>
+    </template>
+    <template id="help-template">
+      <div class="terminal-output">
+        <h4><strong>Available Commands:</strong></h4>
+        <p>- <strong>help:</strong> Show this help message</p>
+        <p>- <strong>about:</strong> Learn about me</p>
+        <p>- <strong>skills:</strong> View my technical skills</p>
+        <p>- <strong>projects:</strong> See my projects</p>
+        <p>- <strong>articles:</strong> Read my articles</p>
+        <p>- <strong>contact:</strong> Get my contact information</p>
+        <p>- <strong>clear:</strong> Clear the terminal</p>
       </div>
-    </div>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-57SP45JR" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe>
-  </noscript>
-</body>
-
+    </template>
+    <template id="welcome-template">
+      <div class="terminal-output">
+        <h4>Welcome to my terminal vCard!</h4>
+        <p>Type '<strong>help</strong>' to see available commands.</p>
+        <p>--------------------------------</p>
+      </div>
+    </template>
+    <template id="about-template">
+      <div class="terminal-output">
+        <p>Hi, I'm carpediem23! 👋</p>
+        <p>
+          I'm a Fullstack Developer passionate about creating web and mobile
+          applications using modern technologies.
+        </p>
+        <p>I love music 🎵 and gaming 🎮 in my free time.</p>
+      </div>
+    </template>
+    <template id="skills-template">
+      <div class="terminal-output">
+        <h4><strong>Technical Skills:</strong></h4>
+        <p>
+          - <strong>Frontend:</strong> React.js, React Native, Next.js,
+          JavaScript, TypeScript
+        </p>
+        <p>- <strong>Backend:</strong> Node.js, Express.js, ASP.NET</p>
+        <p>- <strong>Database:</strong> MongoDB, PostgreSQL, MySQL</p>
+        <p>- <strong>Other:</strong> Git, Docker, Google Cloud, Azure</p>
+      </div>
+    </template>
+    <template id="projects-template">
+      <div class="terminal-output">
+        <h4><strong>Notable Projects:</strong></h4>
+        <p>1. Virtual Card Terminal (This website!)</p>
+        <p>2. Various Web, Game and Mobile Applications</p>
+        <p>For more details, visit: https://github.com/carpediem23</p>
+      </div>
+    </template>
+    <template id="articles-template">
+      <div class="terminal-output">
+        <h4><strong>Here is my some articles:</strong></h4>
+        <ul>
+          <li>
+            📖<a
+              href="https://medium.com/@carpediem23/new-css-selectors-smarter-and-more-effective-style-definitions-a9e697f18f24"
+              target="_blank"
+              >New CSS Selectors: Smarter and More Effective Style
+              Definitions</a
+            >
+          </li>
+          <li>
+            📖<a
+              href="https://medium.com/@carpediem23/using-preload-in-html-the-key-to-enhancing-performance-12f7516b3c4f"
+              target="_blank"
+              >Using Preload in HTML: The Key to Enhancing Performance</a
+            >
+          </li>
+          <li>
+            📖<a
+              href="https://medium.com/@carpediem23/wcag-2-1-a-guide-to-web-accessibility-09f06fbd7e64"
+              target="_blank"
+              >WCAG 2.1: A Guide to Web Accessibility</a
+            >
+          </li>
+          <li>
+            📖<a
+              href="https://medium.com/@carpediem23/html-dialog-saying-goodbye-to-modal-f988419ea4e7"
+              target="_blank"
+              >HTML Dialog — Saying Goodbye to Modal</a
+            >
+          </li>
+          <li>
+            📖<a
+              href="https://medium.com/@carpediem23/how-to-run-your-react-js-application-at-super-fast-speed-with-the-power-of-docker-3a42d81b6b97"
+              target="_blank"
+              >How to Run Your React JS Application at Super Fast Speed with the
+              Power of Docker?</a
+            >
+          </li>
+          <li>
+            📖<a
+              href="https://medium.com/@carpediem23/unlocking-the-future-of-security-embrace-the-passwordless-revolution-with-webauthn-and-passkey-f5f8991417f2"
+              target="_blank"
+              >“Unlocking the Future of Security: Embrace the Passwordless
+              Revolution with WebAuthn and Passkey!”</a
+            >
+          </li>
+        </ul>
+      </div>
+    </template>
+    <template id="contact-template">
+      <div class="terminal-output">
+        <h4><strong>Get in touch (Please click):</strong></h4>
+        <a href="https://github.com/carpediem23" target="_blank">- GitHub</a>
+        <a href="https://www.linkedin.com/in/alptugturkis" target="_blank"
+          >- LinkedIn</a
+        >
+      </div>
+    </template>
+    <noscript>
+      <div class="noscript-content">
+        <img
+          src="./assets/images/profile_transparent.webp"
+          alt="Profile picture of carpediem23"
+          width="150"
+          height="150"
+        />
+        <h1>carpediem23</h1>
+        <p>
+          Hello, I am a fullstack developer who loves music and gaming. I
+          develop web and mobile applications using modern technologies.
+        </p>
+        <div class="social-links-basic">
+          <a
+            href="https://github.com/carpediem23"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Github Profile</a
+          >
+          <a
+            href="https://www.linkedin.com/in/alptugturkis"
+            target="_blank"
+            rel="noopener noreferrer"
+            >LinkedIn Profile</a
+          >
+        </div>
+      </div>
+      <iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-57SP45JR"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe>
+    </noscript>
+  </body>
 </html>
